fix(notificaciones): quitado el overflow hidden que impedia ver el select desplegado

--- a/components/c_notificaciones.css
+++ b/components/c_notificaciones.css
@@ -110,7 +110,6 @@
 .c_notificaciones-search__box {
   text-align: center;
   padding-bottom:64px;
-  overflow:hidden;
 }
 
 .c_notificaciones-search__paragraph {
